# pw-actors_system

./: README.md
actors_system/: CMakeLists.txt  cacti.c  cacti.h  macierz.c  silnia.c
actors_system/test/: CMakeLists.txt  test_empty.c
